--- a/lesson_03/css/main.css
+++ b/lesson_03/css/main.css
@@ -1,4 +1,5 @@
 .main {
+    width: 1100px;
     color: #B4AD9E;
     font-family: 'Playfair Display', serif;
     font-weight: 400;
@@ -18,9 +19,10 @@
     margin-right: 0;
 }
 
-.img_wrapper {
+.images {
     overflow: hidden;
     height: 280px;
+    width: 421px;
 }
 
 .lifestyle {
@@ -51,20 +53,4 @@
     font-size: 14px;
     font-family: 'Playfair Display', serif;
     font-weight: 400;
-}
-.button {
-    text-align: center;
-    margin: 10px auto 50px auto;
-}
-
-.button_load {
-    border: 2px solid #626262;
-    font-size: 20px;
-    background: #ffffff;
-    padding: 10px 25px;
-    color: #626262;
-}
-
-.button_text {
-    color: #626262;
 }
