--- a/lesson_03/css/style.css
+++ b/lesson_03/css/style.css
@@ -4,6 +4,8 @@
 
 @import "./main.css";
 
+@import "./footer.css";
+
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&family=Ubuntu:wght@300;400;500;700&display=swap');
