--- a/lesson_03/css/header.css
+++ b/lesson_03/css/header.css
@@ -1,21 +1,20 @@
 .menu {
-    width: 900px;
+    width: 580px;
     height: 11px;
     margin: 77px auto 100px auto;
     text-align: center;
-
 }
 
-
-.menu_list {
-    width:20%;
+.menu_list{
+    width: max-content;
     margin:0;
     padding:0;
+
 }
 
 .links {
     display: inline-block;
-    list-style-type: none;
+    margin-right: 115px;
 }
 
 
@@ -26,6 +25,11 @@ text-transform: uppercase;
 font-size: 14px;
 font-family: 'Playfair Display', serif;
 font-weight: 400;
+margin-right: auto;
+}
+
+.links:last-child {
+margin-right: 0;
 }
 
 .menu_item_link:hover {
