--- a/lesson_07/css/main.css
+++ b/lesson_07/css/main.css
@@ -1,7 +1,4 @@
 
-.partners {
-
-}
 
 .partners_title {
     text-align: center;
@@ -107,7 +104,7 @@
     border-color: 0.3s ease-out; */
 }
 
-/* !!! TABLET !!! */
+/* tablet */
 
 @media (min-width: 768px) {
     
@@ -147,7 +144,7 @@
     }
 }
 
-/* !!! LAPTOP/COMPUTER !!! */
+/* laptop */
 
 @media (min-width: 1024px) {
 
