--- a/lesson_06/css/main.css
+++ b/lesson_06/css/main.css
@@ -82,7 +82,7 @@
 
 .contact_main_title {
     font-family: 'Montserrat', sans-serif;
-    color: #ffffff;
+    color: #fff;
     font-size: 40px;
     text-transform: uppercase;
     margin: 0px auto 11px auto;
@@ -176,7 +176,7 @@
     font-size: 18px;
     font-weight: 700;
     background-color: #fed136;
-    color: white;
+    color: #fff;
     outline: none;
     border: none;
     border-radius: 3px;
