--- a/lesson_05/css/header.css
+++ b/lesson_05/css/header.css
@@ -1,21 +1,20 @@
 .header {
+    width: 1200px;
+    height: 70px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    /* height: 150px; */
     position: fixed;
     top: 0;
-    background-color: #FFFFFF;
-    z-index: 4;
-    padding-top: 20px;
-    padding-bottom: 100px;
+    left: 50%;
+    margin: 0 auto;
+    transform: translateX( -50%);
+    padding-top: 20px; 
+    justify-content: space-between;
+    background-color: #fff; 
+    z-index: 20;
 } 
 
-
 .header_wrapper {
-    max-width: 1200px;
-    margin: 0 auto;
+    margin: 5px;
 }
 
 .logo_link {
@@ -30,17 +29,12 @@
 .menu {
     width: 490px;
     position: relative;
-    left: 70%
+    left: 120%;
 }
 
 .menu_list {
     display: flex;
     justify-content: space-between;
-    text-align: right;
-}
-
-.menu_list_item {
-
 }
 
 .menu_item {
@@ -89,89 +83,3 @@
     display: block;
  
 }
-
-
-
-
-
-
-
-
-/* .screen {
-    width: 1100px;
-    height: 200px;
-    z-index: 100;
-    overflow: auto;
-    background-color: #080828;
-}
-
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 150px;
-    position: fixed;
-    top: 0;
-    background-color: #FFFFFF;
-    z-index: 50;
-    position: fixed;
-    padding-top: 20px;
-    padding-bottom: 100px;
-}
-
-.header_wrapper {
-    max-width: 1200px;
-    margin: 0 auto;
-
-}
-
-.logo_link {
-    color: #95E1D3;
-    text-transform: none;
-    font-size: 30px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-}
-
-.menu {
-    width: 372px;
-}
-
-.menu_list {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.menu_list_item {}
-
-.menu_item_link {
-    text-transform: uppercase;
-    color: #95E1D3;
-    font-size: 14px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-
-}
-
-.menu_item_link:after {
-    content: '';
-    display: block;
-    width: 51px;
-    height: 4px;
-    background-color: #F38181;
-    margin: 11px auto 0 auto;
-    display: none;
-}
-
-.menu_item_link:hover {
-    color: #F38181;
-    cursor: pointer;
-}
-
-.menu_item_link:hover:after {
-    display: block;
-} */
-
