--- a/lesson_05/css/style.css
+++ b/lesson_05/css/style.css
@@ -2,11 +2,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
-/* font-family: 'Montserrat', sans-serif; */
-
 @import "./header.css";
 
 @import "./main.css";
+
+@import "./team.css";
 
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 
